# leronx

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docker/: Dockerfile  docker-compose.yml
examples/: single_job.py  with_plugins.py
src/leronx/: __init__.py  pipeline.py
src/leronx/assets/: __init__.py  matcher.py  providers.py
src/leronx/plugins/: __init__.py  base.py  builtins.py  registry.py
src/leronx/render/: __init__.py  config.py  effects.py  engine.py
src/leronx/scenes/: __init__.py  composition.py  graph.py
src/leronx/script/: __init__.py  config.py  generator.py  storyboard.py
src/leronx/subtitles/: __init__.py  generator.py  styler.py
src/leronx/voice/: __init__.py  emotions.py  tts_base.py
tests/: test_pipeline.py  test_plugins.py  test_render.py  test_scenes.py  test_script.py  test_voice.py
