[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leronx-engine"
version = "1.0.0"
description = "Open-Source AI Video Generation Pipeline by LeronX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "LeronX Team"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio", "black", "ruff"]
gpu = ["torch>=2.0", "numpy>=1.24"]

[project.urls]
Homepage = "https://leronx.org"
Repository = "https://github.com/Leron-X/leronx"
Documentation = "https://github.com/Leron-X/leronx/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py312']
